Clean up CSS and JS. Clean up clutter

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
 
   <head>
-    <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lobster">
-  <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Gugi">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi">
+  
+   <meta contentType="text/html; charset=UTF-8"/>
 </head>
 
 <body>
@@ -31,9 +31,8 @@
     <div class="grid-item" id="two" onclick="btntwo()"></div>
     <div class="grid-item" id="center">
       <button onclick="startgame()">Start</button>
-      <button onclick="restart()">&#x2B6E;</button>
+      <button onclick="restart()">&circlearrowleft;</button>
       <button onclick="toggle()" id="strictmode">Strict</button>
-      
       <button id="count">0</button>
     </div>
     <div class="grid-item" id="three" onclick="btnthree()"></div>
